force-app/main/default/objects/Stock__c/fields/Gift_Entry__c.field-meta.xml
<CustomField>
    <fullName>Gift_Entry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Gift Entry</label>
    <referenceTo>GiftEntry</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>GiftEntryStocks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>