force-app/main/default/objects/Stock__c/fields/Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shares__c</fullName>
    <label>Number of Shares</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>