force-app/main/default/objects/Stock__c/fields/Stock_Strike_Price__c.field-meta.xml
<CustomField>
    <fullName>Stock_Strike_Price__c</fullName>
    <label>Stock Strike Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>