force-app/main/default/objects/Stock__c/fields/Stock_Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Stock_Ticker_Symbol__c</fullName>
    <label>Stock Ticker Symbol</label>
    <length>20</length>
    <type>Text</type>
</CustomField>